pehli push angular ki

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,42 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="./assets/js/jquery-1.11.1.min.js"></script>
+    <script src="./assets/js/bootstrap.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/jquery-ui.js"></script>
+    <script src="./assets/js/uisearch.js"></script>
+    <script src="./assets/js/easing.js"></script>
+    <script src="./assets/js/imagezoom.js"></script>
+    <script src="./assets/js/jquery.countdown.min.js"></script>
+    <script src="./assets/js/jquery.flexslider.js"></script>
+    <script src="./assets/js/jquery.jscrollpane.min.js"></script>
+    <script src="./assets/js/jquery.mousewheel.js"></script>
+    <script src="./assets/js/modernizr.custom.js"></script>
+    <script src="./assets/js/move-top.js"></script>
+    <script src="./assets/js/simpleCart.min.js"></script>
+    <script src="./assets/js/wow.min.js"></script>
+    
+
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="./assets/styles/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="./assets/styles/style.css" rel="stylesheet" type="text/css" media="all" />
+<link rel="stylesheet" href="./assets/styles/flexslider.css" type="text/css" media="screen" />
+<link href='//fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic' rel='stylesheet' type='text/css'><link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Fascinate' rel='stylesheet' type='text/css'>
+<link href="./assets/styles/animate.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="./assets/styles/bootstrap.css">
+    <link rel="stylesheet" href="./assets/styles/flexslider.css">
+    <link rel="stylesheet" href="./assets/styles/flexslider1.css">
+    <link type="text/less" href="./assets/styles/importer.less">
+    <link rel="stylesheet" href="./assets/styles/jquery-ui.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
   <app-root></app-root>
+    
 </body>
 </html>
