social login updates

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,10 @@
     <link type="text/less" href="./assets/styles/importer.less">
     <link rel="stylesheet" href="./assets/styles/jquery-ui.css">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/toast1.css">
+    <link rel="stylesheet" href="./assets/styles/toast2.css">
+    <link rel="stylesheet" href="./assets/styles/toast3.css">
+    
 </head>
 <body>
   <app-root></app-root>
